<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_gravity="top|end"
            android:scaleType="fitEnd"
            android:scrollX="-10dp"
            android:src="@drawable/hexagon2" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/hexagon1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="150dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="60sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_border_rounded_corner"
                android:drawableStart="@drawable/ic_person_blue_18dp"
                android:drawablePadding="8dp"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.7dp"
                android:background="@drawable/blue_border_rounded_corner"
                android:drawableStart="@drawable/ic_eye_blue_18dp"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_marginTop="12.7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:buttonTint="#fff"
                android:text="Remember Me"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#1566E0"
                android:textColorLink="#236FE2"
                android:textCursorDrawable="@color/colorPrimary"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="18dp"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_fill__rounded_color"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="Login"

                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />

            <View
                android:layout_width="263.7dp"
                android:layout_height="1dp"
                android:layout_gravity="left"
                android:layout_marginTop="6.3dp"
                android:background="#f2f2f3" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="4dp"
                android:text="New user? SIGN UP"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </FrameLayout>
</LinearLayout>