<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <ListView
        android:id="@+id/moodList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="bottom|end"
        android:orientation="horizontal">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addMoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/holo_blue_bright"
            app:elevation="6dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="#fff" />

    </LinearLayout>

</LinearLayout>