<resources>
    <string name="app_name">MoodSpace</string>

    <!-- ae = add edit -->
    <string name="ae_reason_text">Reason</string>
    <string name="ae_add_photo_text">Tap To Add Photo</string>
    <string name="ae_add_location_text">No Location\nAttached</string>
    <string name="ae_initial_emotion_text">Please Select An Emotion</string>

    <!-- am = add mood, em = edit mood -->
    <string name="am_ok_text">Post</string>
    <string name="am_cancel_text">Cancel</string>
    <string name="em_ok_text">Save</string>
    <string name="em_cancel_text">Cancel</string>

    <string name="menu_delete">Delete</string>

    <!-- sm = side bar -->
    <string name="sb_profile">Profile</string>
    <string name="sb_feed">Feed</string>
    <string name="sb_following">Following</string>
    <string name="sb_map">Locations</string>
    <string name="sb_log_out">Log out</string>
    <string name="title_activity_maps">Map</string>

</resources>
